# googletest-sample

./: .gitignore  CMakeLists.txt  README.md
include/: MainClass.h
src/: MainClass.cpp  main.cpp
